package com.mintstack.finance.entity;

import jakarta.persistence.*;
import lombok.*;

@Entity
@Table(name = "user_notifications", indexes = {
    @Index(name = "idx_notifications_user_id", columnList = "user_id"),
    @Index(name = "idx_notifications_is_read", columnList = "user_id, is_read"),
    @Index(name = "idx_notifications_created_at", columnList = "user_id, created_at")
})
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class UserNotification extends BaseEntity {

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "user_id", nullable = false)
    private User user;

    @Column(name = "title", nullable = false)
    private String title;

    @Column(name = "message", columnDefinition = "TEXT")
    private String message;

    @Column(name = "type", nullable = false)
    @Enumerated(EnumType.STRING)
    @Builder.Default
    private NotificationType type = NotificationType.SYSTEM;

    @Column(name = "is_read")
    @Builder.Default
    private Boolean isRead = false;

    @Column(name = "related_entity_id")
    private java.util.UUID relatedEntityId;

    @Column(name = "related_entity_type")
    private String relatedEntityType;

    public enum NotificationType {
        ALERT,          // Price alert triggered
        PORTFOLIO,      // Portfolio update
        SYSTEM,         // System notification
        NEWS            // News notification
    }
}
